[package]
name = "mosquitto-jwt-auth"
description = "Plugin for Mosquitto MQTT broker, which enables authentication and authorisation via JWT over password."
version = "0.4.1"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
edition = "2018"
readme = "Readme.md"
license-file="LICENSE"
repository = "https://github.com/wiomoc/mosquitto-jwt-auth"
keywords = ["MQTT"]
categories = ["network-programming"]

[badges]
coveralls = { repository = "wiomoc/mosquitto-jwt-auth" }

[lib]
crate-type=["dylib"]

[dependencies]
serde_derive = "1.0.215"
serde = "1.0.215"
serde_json = "1.0.133"
base64 = "0.10.0"
biscuit = "0.7.0"
num-bigint = "0.4.6"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.167"
